fixed the task list overflow problem

--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ html {
   width: 100%;
   height: 100%;
   overflow-x: hidden;
-  overflow-y: scroll;
 }
 .html--bg {
   z-index: -5;
@@ -137,8 +136,13 @@ main {
 .task--list {
   background-color: transparent;
   color: black;
-  width: 50vw;
   margin-top: 1.3rem;
+  height: 50rem;
+  width: 100%;
+  overflow-y: auto;
+  overflow-x: visible;
+  padding-right: 50%;
+  transform: translateX(25%);
   transition: all 0.5s ease-in;
 }
 
@@ -150,7 +154,7 @@ main {
   line-height: 2rem;
   font-size: 25px;
   margin-top: 0.3rem;
-  max-height: 50rem;
+  /* max-height: 50rem; */
   border-radius: 15px;
   transform: translateX(150%);
   transition: all 0.5s cubic-bezier(0.34, -0.03, 0.94, -0.33);
@@ -191,7 +195,7 @@ main {
   top: 0;
   margin: 0;
   width: 500px;
-  background-color: black;
+  background-color: rgb(21, 21, 21);
   z-index: 6;
   border-top-left-radius: 30px;
   border-bottom-left-radius: 30px;
@@ -224,7 +228,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgb(20, 20, 20);
+  background: rgb(41, 41, 41);
   width: 90%;
   padding: 0.6rem;
   border-radius: 10px;
@@ -242,14 +246,14 @@ main {
 }
 
 .theme--active--dark {
-  background-color: rgb(37, 37, 37);
+  background-color: rgb(71, 71, 71);
   transition: all 0.5s ease-in-out;
 }
 /* svg {
   stroke: black;
 } */
 .theme--active--light {
-  background-color: #c8c6c6;
+  background-color: #f5f5f5;
   transition: all 0.5s ease-in-out;
 }
 /* 
